# mcp-explorer

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRADEMARK.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  tray.rs
src-tauri/src/commands/: auth.rs  config.rs  discover.rs  introspect.rs  mod.rs  servers.rs  settings.rs
src-tauri/src/config/: mod.rs  reader.rs  watcher.rs  writer.rs
src-tauri/src/discovery/: engine.rs  mod.rs  registry.rs  resolver.rs
src-tauri/src/http/: server.rs
src/__tests__/: api.test.ts  auth-store.test.ts  design-system.test.ts  registry.test.ts  router.test.ts  setup.ts  useServerValidation.test.ts
src/assets/: index.css
src/components/auth/: LoginModal.vue
src/components/clients/: ClientCard.vue  ClientList.vue
src/components/layout/: AppSearch.vue  Sidebar.vue  StatusBar.vue  (+1 more)
src/composables/: useClientMeta.ts  useDiscovery.ts  useMarketplace.ts  useMcpIntrospection.ts  useServerValidation.ts  useSettings.ts  useTauri.ts
src/config/: app.ts
src/mcp-providers/: registry.ts  types.ts
src/router/: index.ts
src/stores/: auth.ts  clients.ts  servers.ts
src/types/: index.ts
src/views/: AppDetailView.vue  ClientDetailView.vue  ClientsView.vue  DashboardView.vue  ServerFormView.vue  ServersView.vue  SettingsView.vue  WelcomeView.vue
(+21 files in other folders)
