[package]
name = "desktop"
version = "0.1.0"
description = "Vinkius Desktop — MCP Server Manager"
authors = ["Vinkius"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-http = { version = "2", features = ["rustls-tls"] }

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
dirs = "6"
futures = "0.3"
url = "2"
log = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
